@@ -1,20 +1,20 @@
 package donga.edu.demo.controllers;
 
+import donga.edu.demo.models.Member;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Controller
 public class demo {
 
-    private final List<String> members = Arrays.asList(
-            "Huỳnh Văn Nghĩa",
-            "Nguyễn Thị Minh Nguyệt",
-            "Nguyễn Trung Kỳ"
+    private final List<Member> members = List.of(
+            new Member("Huỳnh Văn Nghĩa", 25, "Leader", "nghia@donga.edu"),
+            new Member("Nguyễn Thị Minh Nguyệt", 22, "Developer", "nguyet@donga.edu"),
+            new Member("Nguyễn Trung Kỳ", 23, "Designer", "ky@donga.edu")
     );
 
     @GetMapping("/members")
@@ -25,7 +25,16 @@ public class demo {
 
     @GetMapping("/members/{name}")
     public String showMemberDetail(@PathVariable("name") String name, Model model) {
-        model.addAttribute("memberName", name);
+        Member memberDetail = members.stream()
+                .filter(member -> member.getName().equals(name))
+                .findFirst()
+                .orElse(null);
+
+        if (memberDetail == null) {
+            return "member-not-found"; // Trang lỗi nếu không tìm thấy
+        }
+
+        model.addAttribute("member", memberDetail);
         return "member-detail";
     }
 }
